- fix news block height on mobile

--- a/src/scss/common/_global.scss
+++ b/src/scss/common/_global.scss
@@ -26,6 +26,7 @@ body, html {
 #container-scroll {
     scroll-snap-type: y proximity;
     overflow-y: scroll;
+    overflow-x: hidden ;
     height: 100vh;
     transform:translate3d(0,0,0);
     transform-style: flat;
